crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F821_F821_1.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F821 Undefined name `Model`
  --> F821_1.py:11:11
   |
11 | x = cast("Model", x)
   |           ^^^^^
   |

F821 Undefined name `Model`
  --> F821_1.py:18:18
   |
18 | x = typing.cast("Model", x)
   |                  ^^^^^
   |

F821 Undefined name `Model`
  --> F821_1.py:24:14
   |
24 | x = Pattern["Model"]
   |              ^^^^^
   |

F821 Undefined name `Model`
  --> F821_1.py:30:12
   |
30 | x = Match["Model"]
   |            ^^^^^
   |
