crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F821_F821_11.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F821 Undefined name `os`
  --> F821_11.py:18:28
   |
18 | def f(x: Callable[[VarArg("os")], None]):  # F821
   |                            ^^
   |

F821 Undefined name `Baz`
  --> F821_11.py:23:14
   |
23 | f(Callable[["Baz"], None])
   |              ^^^
   |
