crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F821_F821_11.pyi.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F821 Undefined name `os`
  --> F821_11.pyi:15:28
   |
15 | def f(x: Callable[[VarArg("os")], None]):  # F821
   |                            ^^
   |
