crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F821_F821_12.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F821 Undefined name `os`
  --> F821_12.py:20:28
   |
20 | def f(x: Callable[[VarArg("os")], None]):  # F821
   |                            ^^
   |

F821 Undefined name `Baz`
  --> F821_12.py:25:14
   |
25 | f(Callable[["Baz"], None])
   |              ^^^
   |
