crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F821_F821_13.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F821 Undefined name `List`
 --> F821_13.py:8:19
  |
8 | Z = TypeVar("X", "List[int]", "int")
  |                   ^^^^
  |
