crates/ruff_linter/src/rules/pyflakes/snapshots/ruff_linter__rules__pyflakes__tests__F821_F821_18.py.snap
---
source: crates/ruff_linter/src/rules/pyflakes/mod.rs
---
F821 Undefined name `y`
  --> F821_18.py:19:7
   |
17 | # This is no longer allowed on Python 3.14+
18 | x: (y := 1)
19 | print(y)
   |       ^
